--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,17 @@
             <version>4.2.9</version>
             <scope>test</scope>
         </dependency>
+        <!-- adding Vue -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>vue</artifactId>
+            <version>3.5.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>axios</artifactId>
+            <version>1.7.7</version>
+        </dependency>
     </dependencies>
 
 
